<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_surfaceVariant"
    android:padding="16dp">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/md_theme_light_surfaceVariant"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageViewUrlHeader"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:padding="8dp" />

    <EditText
        android:id="@+id/editTextNombrefragmentModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_nombre"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editTextIngredientesfragmentModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_ingredientes"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editTextPreciofragmentModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/et_precio"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editTextGrfragmentModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/et_gramos"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editTextUrlfragmentModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_url"
        android:padding="12dp"/>

    <CheckBox
        android:id="@+id/checkBoxDisponiblefragmentModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_disponible"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonGuardarfragmentModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_guardar"
        android:padding="16dp"/>

</LinearLayout>
    </ScrollView>