<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="16dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- ImageView para la imagen del producto -->
        <ImageView
            android:id="@+id/image_view_producto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/descripcion_imagen" />


        <TextView
            android:id="@+id/text_view_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nombre_del_producto"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>



        <TextView
            android:id="@+id/text_view_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_precio"
            android:textSize="16sp"/>



        <TextView
            android:id="@+id/text_view_disponible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_disponible"
            android:textSize="16sp"/>
        <View
            android:id="@+id/colorview_disponible"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Botón "MODIFICAR" -->
            <Button
                android:id="@+id/button_modificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_modificar"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="#9C27B0"
                android:textColor="#FFFFFF"
                android:foreground="?android:attr/selectableItemBackground"/>

            <!-- Botón "ELIMINAR" -->
            <Button
                android:id="@+id/button_eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_eliminar"
                android:layout_marginTop="16dp"
                android:background="#9C27B0"
                android:textColor="#FFFFFF"
                android:foreground="?android:attr/selectableItemBackground"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>